--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?qauhzwy#1" target="_blank">首页</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/1?byhimyggw" target="_blank">动态网</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/2?lpevvyw" target="_blank">大纪元</a> | <a href="https://dol9bue5bysdj.cloudfront.net/4?mwpqgpeq" target="_blank">看中国</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/pHh5q?puzos" target="_blank">新生网</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/tktpt?clgefmt" target="_blank">阿波罗网</a> | <a href="https://d2r9hn1obbkp2q.cloudfront.net/Mjpvu?hyagqdy" target="_blank">干净世界</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/10?nccydrob" target="_blank">退党服务</a> | <a href="https://d337p4rc38c0de.cloudfront.net/Rffqf?clbhsa" target="_blank">明慧广播</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/nw9Vn?hxjjc" target="_blank">传奇时代</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/AF9AG?btyqkio" target="_blank">新境界影视</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/zqMQA?weqjxb" target="_blank">文昭谈论</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/7?qtabc" target="_blank">明慧</a></p><p><a href="https://duxu97yt14q37.cloudfront.net/9?rfnbk" target="_blank">大法</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/3?zrtuucixe" target="_blank">新唐人</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/obAhT?ndeizdr" target="_blank">人民报</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/xXNHu?rixcbcn" target="_blank">放光明</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/5?iaadkopao" target="_blank">新纪元</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/6?tmzohau" target="_blank">希望之声</a> | <a href="https://dycmgeziwp90b.cloudfront.net/11?lzkywuzf" target="_blank">无界网络</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/Pueji?igmxevs" target="_blank">追查国际</a> | <a href="https://dol9bue5bysdj.cloudfront.net/16?vjuee" target="_blank">明慧之窗</a> | <a href="https://d1u99il8548gs4.cloudfront.net/LdvzZ?alksgus" target="_blank">细语人生</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/fBn3r?lopji" target="_blank">新世纪影视</a> | <a href="https://d11leod1im7q2u.cloudfront.net/PUWMb?xpgusak" target="_blank">江峰时刻</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/8?auagslivt" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?xbbza#1" target="_blank">首页</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/1?tmzkuhc" target="_blank">动态网</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/2?xgjks" target="_blank">大纪元</a> | <a href="https://d21y52w6f35pla.cloudfront.net/4?txxbwd" target="_blank">看中国</a> | <a href="https://dervszfjn9udk.cloudfront.net/pHh5q?ozptwh" target="_blank">新生网</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/tktpt?zwret" target="_blank">阿波罗网</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/Mjpvu?mtyrzshjr" target="_blank">干净世界</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/10?bwjvlj" target="_blank">退党服务</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/Rffqf?mozmbtjhn" target="_blank">明慧广播</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/nw9Vn?afdchbk" target="_blank">传奇时代</a> | <a href="https://d3qxeoyqwzrtyq.cloudfront.net/AF9AG?hotmvnal" target="_blank">新境界影视</a> | <a href="https://doyvntponycdh.cloudfront.net/zqMQA?alzfzxoq" target="_blank">文昭谈论</a> | <a href="https://db8nk66phkh66.cloudfront.net/7?itfmjbe" target="_blank">明慧</a></p><p><a href="https://dld25pfif4r64.cloudfront.net/9?hdklroa" target="_blank">大法</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/3?isrpqzosn" target="_blank">新唐人</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/obAhT?juwoztb" target="_blank">人民报</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/xXNHu?jboyef" target="_blank">放光明</a> | <a href="https://d282b678eon3c.cloudfront.net/5?zrkmdjbb" target="_blank">新纪元</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/6?iepvwus" target="_blank">希望之声</a> | <a href="https://d2b68ib2p4x8t6.cloudfront.net/11?nyklbxhnd" target="_blank">无界网络</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/Pueji?ipwxzmmyp" target="_blank">追查国际</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/16?mscomf" target="_blank">明慧之窗</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/LdvzZ?djzqodf" target="_blank">细语人生</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/fBn3r?onoqhc" target="_blank">新世纪影视</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/PUWMb?akgxgjx" target="_blank">江峰时刻</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/8?kcasx" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689942.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/02/id14191902-667116-320x200.jpg"><p align="center">中共网络新法草案涉跨境镇压 被批反人类恶法</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689942.md#1" title="中共网络新法草案涉跨境镇压 被批反人类恶法""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/02/id14191902-667116-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689947.md#1" title="欧企接管港口 分析：中共巴拿马运河梦破灭""><img width="73" src="https://i.epochtimes.com/assets/uploads/2015/11/1511090158371459-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689529.md#1" title="民运领袖朱虞夫揭中共跨国镇压机制""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689538-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688894.md#1" title="【视频】两次逃离中共迫害的神韵艺术家""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688903-73da93087b2bf0acbc2d0f54-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690010.md#1">抹茶和牛走俏 日本2025年农产品出口创新高</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690008.md#1">川普向哈佛大学索赔10亿美元</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689964.md#1">中共“医疗舰”巡航拉美 被疑具军事目的</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689968.md#1">5万两白银打造的湖南“天下银楼”拍卖流拍</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690019.md#1">甘肃开两会 访民孙金秀被维稳、跟监</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689977.md#1">分析：海南封关 数据靓丽不等于真实开放</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690010.md#1">抹茶和牛走俏 日本2025年农产品出口创新高</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690008.md#1">川普向哈佛大学索赔10亿美元</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689964.md#1">中共“医疗舰”巡航拉美 被疑具军事目的</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689968.md#1">5万两白银打造的湖南“天下银楼”拍卖流拍</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690019.md#1">甘肃开两会 访民孙金秀被维稳、跟监</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689977.md#1">分析：海南封关 数据靓丽不等于真实开放</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689942.md#1">中共网络新法草案涉跨境镇压 被批反人类恶法</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689897.md#1">金价暴跌 大陆黄金回收商单日亏百万元</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689974.md#1">江苏月港大桥垮塌 村民：几百米外听到巨响</a><br>
@@ -107,13 +107,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683154.md#1">北京政变传闻再起 “局势随时突变”</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683035.md#1">实战派张又侠刘振立落马 分析：重创中共军力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682758.md#1">柳岩主演《金刚不坏》 上映48天票房仅70万</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2p5g8zbwu24t2.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2p5g8zbwu24t2.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,410</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2cda42kn9fef6.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2cda42kn9fef6.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 39,410</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 457,717,850 人
+!共 457,719,226 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690019.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2026/02/id14690027-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14690019.md#1">甘肃开两会 访民孙金秀被维稳、跟监</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687481.md#1">上海老太因强拆被软禁12年 遗体不知去向</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688542.md#1">日内瓦人权峰会邀约 刘栋玲因身份问题难成行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687298.md#1">上海访民顾国平进京上访遭行政处罚</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687280.md#1">大陆地方两会密集召开 部分访民遭维稳</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/27/n14685153.md#1">去年旁听张展案被传唤 上海宋嘉鸿对警方追责</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689668.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/03/GettyImages-148416521-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689668.md#1">奔驰中国下调部分车型售价 降幅10%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689628.md#1">哈尔滨宜家关店清仓 现“搬空式”消费场面</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689580.md#1">中间人跑路 中国金属交易行业损失10亿</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689515.md#1">德外长：德国始终向美靠拢 北京比不了</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689055.md#1">万科陷危局 王石被传失联后辟谣</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689009.md#1">广汽集团预计2025年亏损近90亿 由盈转损</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689977.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/12/id14657660-GettyImages-1247125292-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689977.md#1">分析：海南封关 数据靓丽不等于真实开放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689672.md#1">北京清华大学与爱泼斯坦接触 谈开设美分校</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689573.md#1">【新闻大家谈】1月十虎落马 中共领导层已真空</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689506.md#1">【名家专栏】中国出生率骤降背后的消极抗议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689377.md#1">受贿上亿 中共前司法部部长唐一军被判无期</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688403.md#1">【时政春秋】抓捕张又侠之后 军中动态分析</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689974.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689979-FotoJet-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689974.md#1">江苏月港大桥垮塌 村民：几百米外听到巨响</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689810.md#1">江苏盐城在建“月港大桥”垮塌 已致2死3失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689387.md#1">北京长峰医院致命火灾 19人获刑被指“背锅”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689072.md#1">武汉地铁工地龙门吊倒塌 砸中车辆致1死1伤</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686447.md#1">山西高速35辆车相撞 网友：现场如战场一样</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14686190.md#1">俄贝加尔湖冰面翻车 致一中国游客死亡</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689968.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689968.md#1">5万两白银打造的湖南“天下银楼”拍卖流拍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689918.md#1">三退声明精选（2026/02/02）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/3/n14689903.md#1">大陆百亿私募合伙创办人沈显兵去世 年仅40岁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689677.md#1">华人非法移民在意大利夺枪袭警 酿街头交火</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689439.md#1">河南一6岁女童吸入烟曲霉菌 脑部重度感染</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689262.md#1">知名女歌手于文文贵州演唱会上晕倒送医</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/26/1/9/n14672131.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2026/01/id14672209-1903270615401487-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/26/1/9/n14672131.md#1">“上海人演老北京？” 胡歌主演新剧引关注</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/6/n14670511.md#1">《动物方城市2》成中国最卖座好莱坞电影</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/6/n14670410.md#1">DeepSeek全球受限制 各国审查一文看懂</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/3/n14668490.md#1">马杜罗被抓 网民调侃：华为手机或立大功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/26/1/1/n14666490.md#1">南京博物院爆盗卖文物后 逾30博物馆闭馆惹疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/12/30/n14665343.md#1">TikTok的AI内容煽动脱欧 波兰促欧盟彻查</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635481.md#1">【独家】中共国家安全部第十局起底</a><br>
